--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -22,11 +22,13 @@ jobs:
         run: |
           dotnet restore "HotelBooking.Mvc/HotelBooking.Mvc.csproj"
           dotnet restore "HotelBooking.WebApi/HotelBooking.WebApi.csproj"
+          dotnet restore "HotelBooking.UnitTests/HotelBooking.UnitTests.csproj"
 
       - name: Build projects
         run: |
           dotnet build "HotelBooking.Mvc/HotelBooking.Mvc.csproj" --configuration Release --no-restore
           dotnet build "HotelBooking.WebApi/HotelBooking.WebApi.csproj" --configuration Release --no-restore
+          dotnet build "HotelBooking.UnitTests/HotelBooking.UnitTests.csproj" --configuration Release --no-restore
 
       - name: Run unit tests
         run: dotnet test "HotelBooking.UnitTests/HotelBooking.UnitTests.csproj" --no-build --configuration Release --logger:trx
@@ -35,7 +37,7 @@ jobs:
         run: npm install -g newman
 
       - name: Start API
-        run: dotnet run --project "HotelBooking.WebApi/HotelBooking.WebApi.csproj" --no-build &
+        run: dotnet run --project "HotelBooking.WebApi/HotelBooking.WebApi.csproj" --no-build --configuration Release &
         env:
           ASPNETCORE_URLS: http://localhost:5000
 
