--- a/HotelBooking.WebApi/Properties/launchSettings.json
+++ b/HotelBooking.WebApi/Properties/launchSettings.json
@@ -34,6 +34,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "test": {
+        "commandName": "Project",
+        "launchBrowser": false,
+        "applicationUrl": "http://localhost:5000",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Test"
+        }
     }
   }
 }
