--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -41,10 +41,9 @@ jobs:
         run: npm install -g newman
 
       - name: Start API
-        run: dotnet run --project "HotelBooking.WebApi/HotelBooking.WebApi.csproj" --no-build --configuration Release &
+        run: dotnet run --project "HotelBooking.WebApi/HotelBooking.WebApi.csproj" --launch-profile "Test" &
         env:
           ASPNETCORE_URLS: http://localhost:5000
-          ASPNETCORE_ENVIRONMENT: Test
 
       - name: Wait for API to be ready
         run: |
