--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -24,18 +24,23 @@ jobs:
           dotnet restore "HotelBooking.WebApi/HotelBooking.WebApi.csproj"
           dotnet restore "HotelBooking.UnitTests/HotelBooking.UnitTests.csproj"
           dotnet restore "HotelBooking.BDDTests/HotelBooking.BDDTests.csproj"
+          dotnet restore "HotelBooking.WebApiTests/HotelBooking.WebApiTests.csproj"
 
       - name: Build projects
         run: |
           dotnet build "HotelBooking.WebApi/HotelBooking.WebApi.csproj" --configuration Release --no-restore
           dotnet build "HotelBooking.UnitTests/HotelBooking.UnitTests.csproj" --configuration Release --no-restore
           dotnet build "HotelBooking.BDDTests/HotelBooking.BDDTests.csproj" --configuration Release --no-restore
+          dotnet build "HotelBooking.WebApiTests/HotelBooking.WebApiTests.csproj" --configuration Release --no-restore
 
       - name: Run unit tests
         run: dotnet test "HotelBooking.UnitTests/HotelBooking.UnitTests.csproj" --no-build --configuration Release --logger:trx
 
       - name: Run BDD (Cucumber/Reqnroll) tests
         run: dotnet test "HotelBooking.BDDTests/HotelBooking.BDDTests.csproj" --no-build --configuration Release --logger:trx
+        
+      - name: Run API integration tests
+        run: dotnet test "HotelBooking.WebApiTests/HotelBooking.WebApiTests.csproj" --no-build --configuration Release --logger:trx
 
       - name: Install newman
         run: npm install -g newman
